crates/aquascope/tests/snapshots/boundaries__<anon body>@captured_0.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: "<anon body>@captured_0.test"
---
[]

