crates/aquascope/tests/snapshots/boundaries__<anon body>@closure_1.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: "<anon body>@closure_1.test"
---
- location:
    line: 2
    column: 33
  expected:
    read: true
    write: false
    drop: false
  actual:
    type_droppable: false
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: false
      drop: false

