crates/aquascope/tests/snapshots/boundaries__foo@mut_assign.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: foo@mut_assign.test
---
- location: 27
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: true
      drop: false

