crates/aquascope/tests/snapshots/boundaries__main@closure_0.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: main@closure_0.test
---
- location: 66
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: true
    type_writeable: true
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: true
      drop: true
- location: 92
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: true
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
    permissions:
      read: true
      write: false
      drop: true

