crates/aquascope/tests/snapshots/boundaries__main@if_1.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: main@if_1.test
---
- location: 114
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: true
    type_writeable: true
    type_copyable: false
    is_live: true
    path_moved: false
    permissions:
      read: true
      write: true
      drop: true
- location: 142
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: true
    type_writeable: true
    type_copyable: false
    is_live: true
    path_moved: false
    permissions:
      read: true
      write: true
      drop: true
- location: 154
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: false
    type_writeable: true
    type_copyable: false
    is_live: true
    path_moved: false
    permissions:
      read: true
      write: true
      drop: false
- location: 176
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: true
    type_writeable: true
    type_copyable: false
    is_live: true
    path_moved: false
    permissions:
      read: true
      write: true
      drop: true
- location: 199
  expected:
    read: true
    write: true
    drop: false
  actual:
    type_droppable: true
    type_writeable: true
    type_copyable: false
    is_live: true
    path_moved: false
    permissions:
      read: true
      write: true
      drop: true

