crates/aquascope/tests/snapshots/boundaries__make_a_cloner@captured_0.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: make_a_cloner@captured_0.test
---
- location:
    line: 4
    column: 15
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: true
    is_live: true
    path_uninitialized: false
