crates/aquascope/tests/snapshots/boundaries__moveit@match_1.test.snap
---
source: crates/aquascope/tests/boundaries.rs
description: moveit@match_1.test
---
- location:
    line: 16
    column: 9
  expected:
    read: true
    write: false
    drop: false
  actual:
    read: true
    write: false
    drop: true
  data:
    type_droppable: true
    type_writeable: false
    type_copyable: false
    is_live: true
    path_uninitialized: false
